--- a/organic.html
+++ b/organic.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
 </head>
 <body>
-    <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper">
+    <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper Thread_Wrapper">
         <header>
             <div class="top-social-bar">
                 <div class="child-wrp">
@@ -282,15 +282,14 @@
                         <h2>Organic<span> Peel</span></h2>
                     </div>
                     <div class="Slim_content">
+                       <p>
+                         Organic Peel is based on a massage with natural herbs and multivitamins. The micro-particles gently polish the uppermost layers of the skin (Epidermis Removal) the other active component preparations will penetrate the skin where they will be intercepted by the cutis within 48 hours.
+                         The precious, natural active substances such as vitamins, plant hormones, enzymes and other helpful ingredients absorb into the skin. The simulated blood flow enhances metabolism and induces the regeneration of the skin by the creation of new cells and collagen fibres. The full influence takes two to five days. Within 3-4 days, the upper layers of the skin peel are visible.
+                         A mixture of papaya, pineapple, and mango, this non-chemical peel naturally rebalances, reforms, and repairs your skin using organic ingredients with therapeutic effectiveness. This facial is excellent for unsound and sensitive skin. It is also exemplary for women during pregnancy.                        
+                       </p>
                         <p>
-                            An organic peel is a form of exfoliation that uses a chemical solution to remove dead skin cells from the top layer of the skin. Treatment time for a chemical peel can take up to 30 minutes and the peeling process can last anywhere from three to five days after. During the peeling process, the dead skin cells shed or flake off, eventually revealing fresh, new skin underneath.
-                        </p>
-                        <p>
-                            Skin resurfacers use a number of different fruit acid solutions in varying strengths to remove the damaged outer layers of the skin encouraging skin turnover and the production of new cells, allowing healthier and more youthful cells to advance to the surface, giving your skin a fresh rejuvenated look. A course of 5 to 6 skin resurfacer treatments are recommended for optimum results followed by a maintenance program.
-                        </p>
-                        <p>
-                            Insta Dazzle is Mango Peel. Mango peel is a combination peel which consists of powerful components like Salicylic acid, Shea butter, licorice extract, mango fruit pulp, phytic acid, lactic acid, orange stem cells & MDI complex, which are fabulous for intense skin hydration and instant glow. These ingredients work magic on reducing pigmentation and under eye dark circles, instantly giving a rejuvenated even toned skin.
-                        </p>
+                         This organic-based method naturally exfoliates the skin with fruit enzymes and pulp of papaya, pineapple, pumpkin and mango to diffuse dead, dull-looking skin cells. The immersion of organic Japanese green tea and idebenone into the skin means soon your skin will be astonishingly hydrated, renewed and looking lively!
+                       </p>
                     </div>
                 </div>
             </section> 
@@ -304,23 +303,48 @@
                             <h2>SO WHAT ARE THE BENEFITS <span>OF A ORGANIC PEEL?</span></h2>
                     </div>
                     <div class="Benefit-content Organic-Cnt">
-                        <ul>
-                            <li>Improving the skin’s color, clarity, tone, and texture</li>
-                            <li>Stimulating new collagen and healthy skin cell growth, resulting in a radiant complexion
-                            </li>
-                            <li>Reducing discoloration caused by sun damage</li>
-                            <li>Helping to clear up breakouts</li>
-                            <li>Smoothing away the look of fine lines and wrinkles</li>
-                            <li>Increasing hydration of the skin</li>
-                            <li>Addressing visible skin imperfections and superficial scars</li>
-                            <li>
-                                Enabling skincare products used at home to be more effective because a peel can <br>  remove several layers of skin build-up and congestion, allowing products to penetrate deeper into the skin
-                            </li>
-                        </ul>
+                       <p>Chemical Peel is a skin treatment technique that includes using organic acids or peels to exfoliate the external layer of the skin.</p>
+                       <p>The process provokes collagen re-modelling and encourages healthy skin cell regeneration to unveil brighter, younger-looking skin with lesser wrinkles, blemishes and scars.
+                        Lessens the impact of sunburn and discolouration on the skin.
+                        </p>
+                        <p>Rejuvenates oily, lifeless, acne/pimple prone skin and eliminates acne scars.</p>
+                        <p>Hydrates the skin.</p>
+                        <p>Lends a smooth tone to the skin by removing blemishes, pigmentation, tanning, uneven tone, open pores and scars.</p>
                     </div>
                 </div>
             </section>
-            
+            <!-- type--organic--- -->
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp" data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
+                <div class="container">
+                    <div class="Benefit-heading">
+                        <h2>Types Of   <span>Organic Peels?</span></h2> 
+                    </div>
+                    <div class="Benefit-content Organic-Cnt"> 
+                       <div class="key-wrp">
+                            <div class="key01">
+                               <h3>Organic Orange Peel Powder</h3>
+                               <p>Orange is a great source of antioxidants, which help us fight harmful free radicals and keep our skin cells juvenile. Therefore, including orange peel powder in our daily skincare regimen can be remarkably helpful in retaining all the signs of ageing (wrinkles, sagging skin, fine lines, dark spots, etc.) at bay.</p>
+                            </div>
+                            <div class="key01">
+                                <h3>Organic Lemon Peel Powder</h3>
+                                <p>
+                                    This totally organic lemon zest powder makes for a natural skin whitening factor that helps to do away with marks, blemishes, and spots since lemon peels are high in vitamin C and come with exfoliating properties that besides, helps add a degree of fairness to the skin in the most natural way. 
+                                </p>
+                            </div>
+                            <div class="key01">
+                                <h3>Organic Charcoal Peel Off Mask</h3>
+                                <p>
+                                    Charcoal may be good for your skin because of its powers to remove excess oil, but peel-off masks can be too severe for those with sensitive skin or rosacea. Some contain exfoliating components, but in general, peel-off masks are designed to physically exfoliate the skin by the mechanical energy of peeling.
+                                <b>Organic Peel off masks </b>are easy to use and has almost no side effects on any kind of skin. 
+                                </p>
+                            </div>
+                             
+                         </div>
+                    </div>
+                </div>
+            </section>
             <section class="Filler-Treatment Organic_treatment" data-aos="fade-up"
             data-aos-easing="linear"
             data-aos-duration="1300">
