--- a/premanentmakeup.html
+++ b/premanentmakeup.html
@@ -281,36 +281,19 @@
                     </div>
                     <div class="Slim_content">
                         <p>
-                            Permanent makeup is really a series of “cosmetic tattoos.” The process is usually called “micro-pigmentation.” Proponents of permanent makeup welcome the minimization of the time and hassle of putting on makeup daily to their face. 
-                        </p>
-                        <p>
-                            Those supporting permanent makeup typically want a softer, natural-looking appearance they get from applying and removing daily makeup products. 
-                        </p>
-                        <p>
-                            Many people become permanent makeup aficionados because their facial skin is allergic to various makeup types or participate in active sports activities regularly. They no longer need to worry about their makeup running or “sweating off” as they pursue their sporting activities, whether biking, playing tennis, soccer, or enjoying aerobics.
-                        </p>
+                            Do you spend hours casting your lips and eyebrows? Do you ever end up messing your eyeliner because you can’t see precisely without specs? Is that blunt cut in the eyebrow or white brow hair stripping the charm of your face? Do your hands tremble while applying makeup, making it challenging to get dressed for a party quickly? If your reaction to all these questions is huge yes, then Permanent Makeup is made only for you.
+                            From power brows to luscious lips and enchanting eyes, get defined and sharp traits, and say goodbye to the daily trouble of using eyeliner, brow pencil, lipstick or nail paint. It’s the next big obligation in the world of makeup. Highly precocious and result-oriented, Permanent makeup is fast earning fame all over the world. It takes you closer to the beauty that lingers with you for longer and isn’t at all high maintenance. Since the effects last for years, consider it an investment, particularly if you are a lazy beauty girl.
+                        </p> 
                         <h2>
-                            How Is the Permanent Makeup Process Accomplished?
+                            Permanent Makeup
                         </h2>
                         <p>
-                            There are a variety of processes to create permanent makeup, typically dependent on classic tattoo procedures and devices. Among the processes used to affect permanent makeup are the following products and procedures.
-                        </p>
-                        <ul>
-                            <li>Initial consultation with a permanent makeup specialist; </li>
-                            <li>Application of the desired pigment via traditional tattoo coil machines, special pens, rotary machines, or digital rotary machines.</li>
-                            <li>Follow up visits to assess the process success and </li>
-                            <li>healing; andAnalyze the pigment color to see if it needs darkening or lightening.</li>
-                        </ul>
-                        <h2>
-                            Is Permanent Makeup Truly Permanent?
-                        </h2>
-                        <p>
-                            Whether you make your eyebrows, eyelids (with eyeliner), lips, or other facial types of permanent makeup (camouflaging scars, beauty marks, imitation hair, or lash enhancement), these are considered permanent. A pigment is tattooed on the top dermal layer of your skin and you cannot wash off the pigment.
-                        </p>
-                        <p>
-                            However, like other tattoos and pigment infusion, permanent makeup is subject to fading over time and sun exposure. Since this cosmetic process is applied to your face, it may be more prone to fading than other tattoos. You may need to “refresh” your permanent makeup in the future to maintain the color you want.
-                        </p>
-                    </div>
+                         <b>Permanent makeup </b>
+                         is a cosmetic technique that uses tattoos (permanent pigmentation of the dermis) as a way of building styles that fit makeup, like eyelining and different permanent enhancing shades to the skin of the face, lips, and eyelids. It additionally recreates an artificial eyebrow, significantly in folks that have lost them as an outcome of adulthood, disease, like phalacrosis totalis, therapy, or a genetic disturbance. Thus to disguise scars and white spots within the skin line permanent makeup are highly used. It additionally restores or enhances the bust areola, like when breast surgery is performed. If you are tired after looking up so many clinics all over India and looking for the best solution for permanent makeup then Cosset World is the best option all in Gurgaon.
+                        </p> 
+                        <h2>Semi-Permanent Makeup or Microblading</h2>
+                        <p><b>Semi permanent makeup</b>is also known as Microblading. This treatment has shown a remarkable result whenever it is done under the guidance of experts. This technique has helped in refining the shape and appearance of the face and gives you the desired shape of your face. This technique is also helpful in the framing of eye, eyebrows and busts. Microblading is the one-stop-solution for various types of problems such as filling of lips to returning the normal shape of the busts after cancer. Microblading has some hazards just like some other cosmetic surgery methods </p>
+                   </div>
                 </div>
             </section> 
             <!-- end---here -->
@@ -331,9 +314,8 @@
                             </div>
                             <div class="W-right">
                                 <h3>Lip Blushing <span>( Pink Lips ) </span></h3>
-                                <p>To lose 1 kg of your weight, you should create 7,700 calorie deficit. » To create approximately 1,000 calorie deficit every day, you will lose 1 kg per week. What is calorie deficit? If you burn 3,000 calories a day but eat only 2,000, your daily calorie deficit will be 1,000 calories.</p>
-                                <p>How many calories do you need to burn to lose one kilogram? A general rule of thumb is you need to be in an energy deficit of around 7,000 calories (29,400 kilojoules) to lose one kilogram of fat. A calorie deficit is a state in which you burn more calories than you consume.</p>
-                            </div>
+                                <p>A permanent lip shade keeps you from the daily hassle of applying and reapplying lipstick. Often, shades of pink in little dark or light tint are used as a permanent lip colour. It makes your lips look stout and luscious. A mild anaesthesia is given to ease you and then the tattooing is done. A little lump can befall after the treatment which passes away in a day. The light pink tone is quite popular among women as it looks more realistic. After this procedure, a touch of lip gloss is all you require to light up your face in no time. Go for exercises or swimming, this permanent colour won’t fade off. It lasts up to six months and even more in some cases</p>
+                           </div>
                         </div> 
                 </div>
                 <!-- end---here -->
@@ -348,10 +330,7 @@
                             </div>
                             <div class="W-right">
                                 <h3>permanent   <span> eyebrows </span></h3>
-                            <p>Want to win the battle against weight loss? How about going for an advanced level program that takes care of your weight-loss without racking your brains over rigorous workouts and strict diets?
-                                </p>
-                                <p>
-                                    The COSSET WORLD Lipofit is one of the best weight reduction techniques, which helps you get rid of unwanted fat from the most problematic areas of the body, including your thighs, hips, abdomen, and arms. Also known as Spot Reduction Therapy, this is your best and the safest bet to tone down the body.</p>
+                                <p>Many national and international models and celebrities, defined, well-groomed eyebrows have displayed a fixture on the beautiful display. Sharp brows make heads turn and urge wow! Today, getting a perfect pair of brows is much easier than ever. With Permanent makeup, you can fix Cara Delevingne remarkable cuts, stain them darker, label and shape them like a diva. Thick or sharp, light or dark, round or arched – this treatment permits you to decide the form and colour of your choice.</p>
                             </div>
                         </div> 
                 </div>
@@ -366,10 +345,7 @@
                         </div>
                         <div class="W-right">
                             <h3>permanent   <span>   eye lashes </span></h3>
-                        <p>Want to win the battle against weight loss? How about going for an advanced level program that takes care of your weight-loss without racking your brains over rigorous workouts and strict diets?
-                            </p>
-                            <p>
-                                The COSSET WORLD Lipofit is one of the best weight reduction techniques, which helps you get rid of unwanted fat from the most problematic areas of the body, including your thighs, hips, abdomen, and arms. Also known as Spot Reduction Therapy, this is your best and the safest bet to tone down the body.</p>
+                            <p>Only some of us are blessed with abundant, dense eyelashes. But we all can boast of thick eyelashes with the aid of permanent eyeliner or kajal. A thin liner is tattooed directly in the lash line that generates an illusion of thicker, darker, and totally full lashes. The tattoos can be added to your top or lower lashline, or both, so either way the tattoos add an instantly noticeable sharpness to your eyes. It does not have any side effects and you can drive back to work completely carefree. It lasts up to 3 years or even more in some cases.</p>
                         </div>
                     </div> 
             </div>
@@ -384,10 +360,7 @@
                     </div>
                     <div class="W-right">
                         <h3>hair <span> bleeding  </span></h3>
-                    <p>Want to win the battle against weight loss? How about going for an advanced level program that takes care of your weight-loss without racking your brains over rigorous workouts and strict diets?
-                        </p>
-                        <p>
-                            The COSSET WORLD Lipofit is one of the best weight reduction techniques, which helps you get rid of unwanted fat from the most problematic areas of the body, including your thighs, hips, abdomen, and arms. Also known as Spot Reduction Therapy, this is your best and the safest bet to tone down the body.</p>
+                        <p>Permanent makeup for the head is also recognised as scalp camouflage or hair follicle simulation. During this process, an experienced and licensed practitioner basically recreates missing hair strands, thereby inflating the area with "hair" and creating a natural look. Hair colour and re-texturing treatments like straightening, re-bonding, smoothening, etc play with the hair links making them muffled and dry. While Hair colour ups your style outcome, repeated use of these colours and treatments definitely makes hair dehydrated. Now raise your style standard without losing its natural shine with a Hair spa that will restore the moisture stability of the hair and keep them healthy.</p>
                     </div>
                 </div> 
         </div>
@@ -395,7 +368,26 @@
             </div> 
         </div>
      </section>  
- 
+     <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp" data-aos="fade-up"
+     data-aos-easing="linear"
+     data-aos-duration="1300">
+         <div class="container">
+             <div class="Benefit-heading">
+                 <h2>Cost of   <span>Permanent Makeup</span></h2> 
+             </div>
+             <div class="Benefit-content Organic-Cnt"> 
+                <div class="key-wrp">
+                     <div class="key01">
+                         <p>
+                            Mostly permanent makeup is preferred by clients over microbladding just because of the cost differences. There is not much cost difference but the results of permanent makeup last for a much longer period of time. 
+                            <b>Permanent makeup lips </b>lips will look so luscious that you will never go back to general makeup techniques. Whereas the
+                            <b>the eyebrow permanent makeup </b>cost will shock you, with some great discounts available for you while registering. Any kind of information regarding treatments can be inquired via our website or directly through the phone. Get in touch with us and we will help you out with your problems. 
+                         </p> 
+                    </div>
+                  </div>
+             </div>
+         </div>
+     </section>
  
 </div> 
         
