--- a/prpface.html
+++ b/prpface.html
@@ -279,21 +279,20 @@
             data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
-                        <h2>PRP Treatment <span> for face</span></h2>
+                        <h2>PRP Face  <span> Treatment</span></h2>
                     </div>
                     <div class="Slim_content">
                         <p>
-                            Platelet-rich plasma (PRP) is a form of blood plasma that has been enriched with platelets and growth factors. This encourages cellular growth, stimulates healing, and gives a youthful appearance to the skin. 
+                            Platelet Rich Plasma Therapy, also identified as Facial lifting, has been gaining a reputation in the skincare and beauty industry swiftly. This procedure is widely used to repair wrinkles, sun damage, scars, and dark spots. Essentially the 
+                            <b>PRP face treatment </b>defies the effects of ageing that are visible on your face.
                         </p>
                         <p>
-                           Platelets are tiny cell fragments that stop bleeding and bruising and contain growth factors and natural substances that encourage cellular growth. Platelets provide a person with the building blocks for healing when sustaining a burn or cut. They transform the quality and overall appearance of the skin. 
+                            While there are many excellent anti-ageing treatments on the market, such as fillers, botox, and surgical facelifts, almost none of them provide the extraordinary healing powers of your own body. 
+                            <b>PRP treatment for face </b>aims to do just that.
                         </p>
                         <p>
-                            Not only does the PRP cause an increase in volume, but PRP also contains at least 8 growth factors that will, over a period of time, continually work as a rejuvenating agent.
-                        </p>
-                        <p>
-                            Yes the procedure is safe for all Skin types. There is no suture on treatment area and no adverse post effects. It is completely safe- US-FDA Certified.
-                        </p>
+                            PRP has been used to achieve a variety of astonishing outcomes. Because of their unimaginable healing properties, experts often use PRP to promote faster healing after the operation.
+                        </p> 
                     </div>
                 </div>
             </section> 
@@ -304,43 +303,62 @@
             data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
-                        <h2>5 BENEFITS OF  <span>PRP</span></h2>
+                        <h2>How Does It Work And  <span>What Are its Benefits?</span></h2> 
                     </div>
                     <div class="Benefit-content Organic-Cnt"> 
                        <div class="key-wrp">
                             <div class="key01">
-                                    <h3>IT PROVIDES TOTAL REJUVENATION</h3>
-                                    <p>
-                                        PRP stimulates collagen and elastin production which thickens and tightens thinning skin, effectively smoothing wrinkles and fine lines. Because it boosts collagen, it’s also a great treatment for improving overall skin texture and tone. It’s particularly good for people who suffer from rosacea or acne.
+                                   <p>PRP Therapy is a non-surgical method that consists of drawing blood from your body, separating the platelets, and then placing them back in the skin on your face through microneedling. The procedure aims to speed up cell turnover by renewing the skin.
+                                    There are four distinct elements in your blood; white blood cells, red blood cells, platelets, and plasma. During this procedure, we will draw your blood and twirl it in a centrifuge which will depart your blood cells from your platelets and plasma. This will then be reinjected into the skin on your face to arouse cell turnover and collagen generation.
+                                    PRP gives you the impression of a facelift, but with substantially no downtime. The benefits of PRP Therapy incorporate:
                                     </p>
+                                     <ul>
+                                         <li> Improved skin tone</li>
+                                         <li> Tighter skin</li>
+                                         <li> Softer skin texture</li>
+                                         <li> Smooth lines</li>
+                                         <li> Smaller pores</li>
+                                     </ul>
+                                     <p>PRP is conducted by two different methods namely-</p>
+                                     <p>(1)Micro-needling and (2) Fractional/CO2 laser</p>
                             </div>
                             <div class="key01">
-                                <h3>IT’S A NATURAL TYPE OF COSMETIC INJECTABLE</h3>
+                                <h3> Micro-needling</h3>
                                 <p>
-                                    PRP is extremely effective for treating difficult to treat areas, such as the delicate under-eye area where clients often notice signs of aging first but where no laser can be used.
+                                    While the spinning of your blood is taking place in the centrifuge, a doctor will be conducting your Micro-Needling treatment. This treatment alone makes the body to go into overdrive in order to create more collagen and elastin. 
                                 </p>
-                            </div>
+                            </div> 
                             <div class="key01">
-                                <h3>IT’S SAFE</h3>
+                                <h3>Fractional/CO2 Laser</h3>
                                 <p>
-                                    Because it uses your own natural elements, PRP is very safe. It’s also not a new treatment. It’s long been recognized and used in the hospital system and in sports medicine for its effective wound healing properties since the 1970s.
+                                    Adding PRP takes laser resurfacing to a new level by stimulating healing and enhancing wanted new collagen production. Following your Halo or CO2 laser treatment, activated PRP serum is implemented to skin that is ideally befitted to accept the wound-healing platelet serum. 
+                                    <b>PRP laser treatment for face </b>creates small pores in the skin, perfect for PRP to get absorbed into the skin immediately. 
                                 </p>
-                            </div>
+                            </div> 
+                         </div>
+                    </div>
+                </div>
+            </section> 
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp" data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
+                <div class="container">
+                    <div class="Benefit-heading">
+                        <h2>Cost OF PRP   <span>Face Treatment?</span></h2> 
+                    </div>
+                    <div class="Benefit-content Organic-Cnt"> 
+                       <div class="key-wrp">
                             <div class="key01">
-                                <h3>RESULTS ARE LONG-LASTING</h3>
-                                <p>Thread lifts help stimulate collagen production, resulting in more youthful-looking skin. In addition, the threads pull your face taut, eliminating wrinkles and giving you an overall smoother appearance. The areas of your face where the threads are placed enjoy a sharp reduction in wrinkles and lines.</p>
-                            </div>
-                            <div class="key01">
-                                <h3>No Risk of Contamination</h3>
-                                <p>
-                                    PRP therapy uses nothing more than your own blood, meaning that there is no risk of platelet or plasma rejection. The body won’t respond to the introduction of PRP beneath the skin in a negative way.
-                                </p>
+                                 <p> 
+                                      <b>PRP face treatment </b> cost depends on the type of surgery you want. It is a trustworthy and efficient treatment and takes around 1 hour, accompanied by 3-4 days of recovery time. The recurrence of treatment is determined individually, but a usual course includes monthly treatments for 3-4 months for facial rejuvenation and 1-3 months for Hair Loss with repeat or maintenance treatment. 
+                                 </p> 
+                                 <p>In India, vampire facelifts can cost between Rs 30,000 (for just the under-eye area) and Rs 80,000 (for the whole face) per session and the smoothened results can serve up to 18 months. Vampire facials are less costly as they do not involve real injection but only a surface massage and mask with PRP.</p>
                             </div>
                          </div>
                     </div>
                 </div>
             </section>
-            
+
             <section class="Filler-Treatment Organic_treatment Thread-Treatment" data-aos="fade-up"
             data-aos-easing="linear"
             data-aos-duration="1300">
