--- a/scalp.html
+++ b/scalp.html
@@ -273,26 +273,33 @@
           </div>
     <div class="Main-content-Wrapper Main-Filler-content Main-Prp-content Scalp-content">
             <!-- Slim--Service --> 
-            <section class="Slim_Service Filler-Service Prp-service" data-aos="fade-up"
+            <section class="Slim_Service Filler-Service Org_wrp Prp-service" data-aos="fade-up"
             data-aos-easing="linear"
             data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
                         <h2>Scalp & Hair <span>Treatment</span></h2>
                     </div>
-                    <div class="Slim_content">
-                        <p>
-                            Hair loss and thinning hair are common problems across all genders. About 50 million men and 30 million women have lost at least some hair. It’s especially common after reaching age 50 or as a result of stress. 
-                        </p>
-                        <p>
-                            And there are seemingly hundreds of different hair loss treatments with varying levels of reliability and success. But some are based on much more solid science than others. 
-                        </p>
-                        <p>
-                            You might be someone who fusses with your hair on some level. Maybe you fret over your hair type, pick at your split ends or look for those dry flakes that cascade off when you scratch your head. Not everyone has that Hollywood hair with a perfect scalp to match. One thing's for certain, though, if you want great hair, you'll need a great scalp, too.
-                        </p>
-                        <p>
-                            Just as an oily scalp leads to oily hair, a dry scalp often results in hair that looks dull and lifeless, not to mention skin that is itchy and flaky. But if you are dealing with a dry scalp, treatment might also be as close as your shampoo bottle. 
-                        </p>
+                    <div class="Slim_content Organic-Cnt"> 
+                        <p>Hair fall has become the general problem which is affecting every gender in every age group. Losing 50-100 hair strands in a day is normal but, where more than this, is the symbol of Hair Loss which may take the form of an absolute stage of baldness. So it is better to get the best treatment at the correct time. At our Clinic, several 
+                            <b>Scalp Treatment for hair loss </b>are provided ranging from PRP Hair Treatment to Hair Transplant, non-surgical methods to operational procedures.</p>
+
+                        <p>There are numerous reasons for hair loss although the most significant cause of hair fall is an imbalance of a hormone called DHT - Dihydrotestosterone. Not only the male, female can be seen having the grievances of Hair Fall or Hair Loss. There can be multiple factors responsible for the Hair Loss in men and women which are :</p>
+                        <ul>
+                            <li> Ageing</li>
+                            <li> High Level of Stress</li>
+                            <li> Unhealthy Diet</li>
+                            <li> Environmental factors such as dust, pollution</li>
+                            <li> Unhygienic Rules</li>
+                            <li> 	Improper hair care</li>
+                            <li> Using hair accessories and chemicals</li>
+                            <li> 	Hormonal Changes at the stage of pregnancy and menopausal.</li>
+                             <li> 	Birth Control Pills,</li>
+                             <li> 	Thyroid dysfunction</li>
+                             <li> Surgical effects and medications.</li>
+                             <li> 	Parlour treatments</li>
+                        </ul>
+                        <p>Normally, baldness follows from degree 1 to degree 7 which is the excessive hair loss stage. At grade 1, no symptoms can be found instead of having dropped hairs on comb, pillow and shower drain. Once the problem continues, the hairline can be seen as more widened and growing. So get the <b>the best scalp treatment for hair growth </b>is what you will get at Cosset World.</p>
                     </div>
                 </div>
             </section> 
@@ -303,14 +310,14 @@
             data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
-                        <h2>Five Benefits Of Scalp  <span>Treatments</span></h2>
+                        <h2>Types of  <span>treatment available</span></h2>
                     </div>
                     <div class="Benefit-content Organic-Cnt"> 
                        <div class="key-wrp">
                             <div class="key01">
-                                    <h3>Relaxation.</h3>
+                                    <h3>Hair Transplantation</h3>
                                     <p>
-                                        I think we can all agree that there is nothing like a good scalp massage. The effects are immediate and extremely relaxing! I don’t know about you, but it’s definitely my favorite part of salon visits. A scalp massage can even prevent and get rid of headaches, which is reason enough for people with chronic headaches to get this service done. During a scalp treatment you’ll receive a good, long scalp massage as they apply the leave-in conditioner. 
+                                        This type of method removes tiny cuts of skin, each containing a few hairs, from the back or sides of your scalp. The plugs are then embedded into the bald parts of your scalp. Several transplant sessions may be needed, as genetic hair loss grows with time. <b>Hair specialist in Gurgaon,</b>specifically at Cosset world are trained experts to perform these operations with ease. 
                                     </p>
                             </div>
                             <div class="key01">
@@ -320,21 +327,27 @@
                                 </p>
                             </div>
                             <div class="key01">
-                                <h3>Stimulates Blood Flow.   </h3>
+                                <h3>Medicines </h3>
                                 <p>
-                                    The exfoliation and massage portions of a scalp treatment helps to stimulate blood flow to your scalp, making it easier for blood to reach your follicles and deliver important nutrients. The hair that grows out of those nutrient-rich follicles will be healthy and supple! Again, a healthy follicle means healthy hair
+                                    Medicines licensed by the Food and Drug Administration (FDA) to treat hair loss involve Minoxidil solution and Finasteride. <b>Hair specialist doctor in Gurgaon </b>will help you with these medications.
                                 </p>
                             </div>
                             <div class="key01">
-                                <h3>Prevents Thinning And Hair Loss.</h3>
+                                <h3>Hair weaving or Hair patches </h3>
                                 <p>
-                                    Clogged follicles can result in a lack of hair growth. When you unclog those follicles and reset the sebum production levels, your hair has a chance to grow back much healthier! Some scalps require special products to remove an excessive amount of build-up, and some will even require medication. But if caught early enough, a simple scalp treatment done regularly can promote the growth of thicker, healthier hair.
+                                    This one is the temporary method in which hair patches of different colour or quality can be attached to cover the area of partial baldness. Infrequently it is used to treat the partial hairlessness as other non-surgical treatments are available to cure the hair fall or hair loss.
                                 </p>
                             </div>
                             <div class="key01">
-                                <h3>Gets Rid Of Dandruff.</h3>
+                                <h3>Low-level Laser Light Therapy (LLT)</h3>
                                 <p>
-                                    No one likes an embarrassing dandruff problem… Dandruff can be a result of either too much oil production or too little. If your scalp is producing too much oil, it irritates the scalp and causes flakiness. If it isn’t producing enough, that dryness will also result in irritation and flakiness. A scalp treatment will involve some exfoliation to get rid of all that dead skin, leaving a layer of fresh, healthy skin behind. You’ll also get a leave-in conditioner applied, which lubricates and moisturizes the scalp to promote healthy hair growth.
+                                    In this process, laser light is transferred to increase the blood flow in the scalp and thus enhancing the hair growth.
+                                </p>
+                            </div>
+                            <div class="key01">
+                                <h3>PRP hair Treatment</h3>
+                                <p>
+                                    In this process, plasma content is obtained from the patient's blood and implanted on the scalp bearing the hairless area. This is one of the famous hair growth procedure nowadays.
                                 </p>
                             </div>
                          </div>
