--- a/thread.html
+++ b/thread.html
@@ -282,18 +282,11 @@
                         <h2>Thread <span> lift</span></h2>
                     </div>
                     <div class="Slim_content">
-                        <p>
-                            Are you in your 30s or beyond with some skin sagging and want to put an end to signs of aging? Then maybe the thread lift is perfect for you.
-                        </p>
-                        <p>
-                            The procedure of Thread Lift involves sutures and little cones on the thread made from a polymer called Polydioxanone (PDO). These threads are completely reliable and sturdy, even though they are supposed to breakdown naturally over time. 
-                        </p>
-                        <p>
-                            The treatment begins with a tiny entry made close to the ear. Soon after, fine threads are guided along pre-marked contours on the skin. The barbs in the thread auto-lock themselves in the skin and help hold it firmly in place. The new collagen starts forming around the thread that supports the skin. 
-                        </p>
-                        <p>
-                            The results depend on factors such as age and the degree of sagging to be corrected. Generally, you will be able to see a visible difference in your skin for up to 18 months. It is during this time the body will continue to produce new collagen.
-                        </p>
+                        <h2>What is a thread lift?</h2>
+                        <p>Over time, adjustments to the shape of the face and its appearance occur due to age-related changes in facial skin strength and elasticity along with fat, bone and cartilage loss.</p>
+                        <p>A <b>thread lift</b>is a minimally invasive, rejuvenating treatment that uses specialised surgical threads to lift and reconstruct sagging skin on the mid-face, cheeks and neck, giving a firmer, more youthful look.</p>
+                        <h2>How do face thread lifts work?</h2>
+                        <p>Conducted correctly by a medical specialist, over time face thread lifts gradually to stimulate collagen creation to restore facial volume and smooth out deep lines and wrinkles. At the skin, we apply a brand called Silhouette Soft thread lifts. Silhouette Soft is designed to heal the signs of ageing and give you a naturally renewed look. It is suitable for both men and women and offers a unique dual effect – the immediate lift and the long-term collagen restoration. Silhouette Soft is produced from resorbable polylactic acid sutures, which dissolve to help stimulate your skin’s own collagen generation. The threads are injected under the skin using a syringe (without any incisions), to raise the sagging tissue in problem areas.</p>
                     </div>
                 </div>
             </section> 
@@ -304,36 +297,57 @@
             data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
-                            <h2>Four Key Benefits of a  <span>Thread Lift</span></h2>
+                            <h2>What are the benefits   <span>Thread Lift</span></h2>
                     </div>
-                    <div class="Benefit-content Organic-Cnt">
-                         <p>
-                            If you're looking into thread lift costs, you're not alone. Thread lifts are enjoying a well-deserved reputation as the perfect way to create a refreshed, more youthful appearance without having to go through heavily invasive surgery. There are several key reasons that you may want to consider getting a thread lift over a regular facelift. Some of those benefits are listed below.
-                         </p>
+                    <div class="Benefit-content Organic-Cnt"> 
                        <div class="key-wrp">
                             <div class="key01">
-                                    <h3>Immediate results </h3>
-                                    <p>when you have facelift surgery, it can often take weeks or months before results are seen. Many people love the fact that with a thread lift, you're getting almost instant results. As soon as you finish getting your procedure, you'll have a tighter, more youthful-looking face. A dissolvable thread is inserted and strategically placed under the skin. They're then pulled upwards to lift the face. New Paragraph</p>
-                            </div>
+                                    <h3>Thread face lift  </h3>
+                                    <p>treatment can treat the following skin problems and have a range of advantages:</p>
+                                </div>
                             <div class="key01">
-                                <h3>Quick Recovery </h3>
+                                <h3>Hollow cheeks </h3>
                                 <p>
-                                    When you have regular facelift surgery, you're looking at a heavy recovery time that often involves a lot of discomforts that can last weeks. With a thread left, you can actually walk in for your procedure at lunchtime and meet up with friends for dinner the same day. New Paragraph
+                                    loss of volume from our cheeks is very ageing but a thread lift can trigger collagen generation which fills the void.
                                 </p>
                             </div>
                             <div class="key01">
-                                <h3>Tight, Youthful Skin</h3>
-                                <p>Thread lifts help stimulate collagen production, resulting in more youthful-looking skin. In addition, the threads pull your face taut, eliminating wrinkles and giving you an overall smoother appearance. The areas of your face where the threads are placed enjoy a sharp reduction in wrinkles and lines.</p>
+                                <h3>Jowls </h3>
+                                 <p>as we age and gravity takes its exaction, jowls can form nearby the jawline and can create the effect of excess skin.</p>
                             </div>
                             <div class="key01">
-                                <h3>Lasts a Long Time</h3>
-                                <p>Thread lifts help stimulate collagen production, resulting in more youthful-looking skin. In addition, the threads pull your face taut, eliminating wrinkles and giving you an overall smoother appearance. The areas of your face where the threads are placed enjoy a sharp reduction in wrinkles and lines.</p>
+                                <h3>Sagging cheeks </h3>
+                             <p>the mild to mild sagging of cheeks are affected by the ageing process but can be corrected by <b>Thread lift for face.</b></p>
+                            </div>
+                            <div class="key01">
+                                <h3>Deep wrinkles </h3>
+                                <p>folds and lines around the nose and chin are made by fat pads in our face shifting due to age.</p>
+                                <p>After the procedure, patients can see that treated regions will be slightly raised, reducing sagging and giving patients a younger-looking and rejuvenated look. The threads are not noticeable and go buried within the skin of the patient.
+                                    Minimal difficulties can be faced by patients like swelling in the concerned areas, and subtle bruising which normally resolves on their own within a few days later of the treatment.
+                                    </p>
                             </div>
                          </div>
                     </div>
                 </div>
             </section>
-            
+            <!--before  -->
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp"  data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
+                <div class="container">
+                    <div class="Benefit-heading">
+                            <h2>Before and  <span> After Photos </span></h2>
+                    </div>
+                    <div class="Benefit-content Organic-Cnt"> 
+                       <div class="key-wrp">
+                            <div class="key01"> 
+                               <p><b>Thread lift before and after </b>can be seen in the below photos as many clients do like to check out the actual results of the treatment. So keeping that in mind we have displayed these pictures for your convenience. </p>
+                            </div> 
+                         </div>
+                    </div>
+                </div>
+            </section>
+            <!--before--Phto-->
             <section class="Filler-Treatment Organic_treatment Thread-Treatment"  data-aos="fade-up"
             data-aos-easing="linear"
             data-aos-duration="1300">
